1870
That's because there is a very unfortunately named class called java.sql.Array, which you are importing and corrupting your main method.  This works:
```scala
def main (args: scala.Array[String]) = {
```
Or this:
```scala
import java.sql.{ Array => _, _ }
```
Or happily in trunk it won't even compile.
```scala
$$ scalac28 a.scala 
a.scala:5: error: java.sql.Array does not take type parameters
  def main (args: Array[String]) = {
                  ^
one error found
```
